# research-atlas

./: .env.example  .gitignore  README.md  a1_rag_to_ttl.py  a3_infer_lineage.py  agent_collect.py  agent_filter.py  apply_pending.py  dev.sh  load_neo4j.py  pyproject.toml  test_collect.py  verify_neo4j.py
.github/workflows/: ci.yml
agents/: collect.py  filter.py
api/: deps.py  graph_neo4j.py  main.py
api/routers/: __init__.py  collect.py  command.py  graph.py  lexicon.py  rebuild.py
backend/: __init__.py
backend/agents/: __init__.py  collect.py  filter.py
backend/api/: deps.py  graph_neo4j.py  main.py
data/: lexicon.backup.json  lexicon.json
data/outputs/: 1706.03762.concepts.json  1706.03762.parsed.json  1706.03762.relations.json  1810.04805.concepts.json  1810.04805.parsed.json  1810.04805.relations.json  1910.10683.concepts.json  1910.10683.parsed.json  1910.10683.relations.json  2001.08361.concepts.json  2001.08361.parsed.json  2001.08361.relations.json  2002.08909.concepts.json  2002.08909.parsed.json  2002.08909.relations.json  2004.04906.concepts.json  2004.04906.parsed.json  (+397 more)
docs/: HOW_IT_WORKS.md  WORKLOG.md
eval/: README.md  exp_compare_v1_v2.py  exp_compare_v2_v3.py  exp_model_compare.py  exp_model_per_paper_diff.py  exp_relate_v2.py  exp_relate_v3_evidence.py  exp_relate_v4_rw.py  exp_related_work_extract.py  exp_rescore_bucket1.py  exp_rescore_canonfix.py  report_buildson.py  run_relate_full.py  score_buildson.py  smoke_collect.py  test_collect.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
graphdb/: conn.py  load.py  read.py  verify.py  write.py
pipeline/: __init__.py  config.py  embed_nodes_v2.py  extract.py  fetch.py  normalize_core.py  normalize_v2.py  parse.py  relate.py
prompts/: README.md  __init__.py  collect.py  filter.py  paper_type_criteria.py  pipeline.py  relate.py
scripts/: apply_pending.py  audit_cuts.py  fetch_goldset.py  gen_predictions.py  ingest_goldset.py  make_goldset_worksheets.py  review_helper.py  verify_parse_cuts.py
src/: build_graph.py  config.py  embed.py  embed_nodes.py  embed_nodes_v2.py  extract.py  fetch.py  normalize.py  normalize_core.py  normalize_v2.py  parse.py  prompts.py  relate.py
tests/: __init__.py  conftest.py  test_collect_helpers.py  test_normalize_core.py  test_parse_cut.py  test_score_buildson.py
web/: index.html
web/src/: App.jsx  (+2 more)
(+564 files in other folders)
