[project]
name = "nlp-akg-practice"
version = "0.1.0"
description = "NLP-AKG 방식 KG 추출/정규화 연습"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "feedparser>=6.0.12",
    "langgraph>=1.2.4",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "neo4j>=6.2.0",
    "numpy>=2.4.6",
    "openai>=2.41.0",
    "owlrl>=7.1.4",
    "pymupdf4llm>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "rdflib>=7.6.0",
    "uvicorn[standard]>=0.49.0",
]
