[project]
name = "nlp-akg-practice"
version = "0.1.0"
description = "NLP-AKG 방식 KG 추출/정규화 연습"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "feedparser>=6.0.12",
    "langgraph>=1.2.4",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "neo4j>=6.2.0",
    "numpy>=2.4.6",
    "openai>=2.41.0",
    "owlrl>=7.1.4",
    "pymupdf4llm>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "rdflib>=7.6.0",
    "uvicorn[standard]>=0.49.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# 루트의 코드 디렉토리를 패키지로 설치(editable) → cwd·sys.path 해킹 없이 절대 import.
# eval/·scripts/ 는 __init__.py 없는 실행 스크립트라 패키지에서 제외(설치 대상 아님).
[tool.setuptools.packages.find]
include = ["agents*", "api*", "graphdb*", "prompts*", "src*"]
