[project]
name = "research-atlas"
version = "0.1.0"
description = "LLM·RAG·에이전트 연구 논문의 지형도 — builds_on 계보 그래프 추출·정규화·서빙"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "feedparser>=6.0.12",
    "langgraph>=1.2.4",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "neo4j>=6.2.0",
    "numpy>=2.4.6",
    "openai>=2.41.0",
    "owlrl>=7.1.4",
    "pymupdf4llm>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "rdflib>=7.6.0",
    "uvicorn[standard]>=0.49.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# 루트의 코드 디렉토리를 패키지로 설치(editable) → cwd·sys.path 해킹 없이 절대 import.
# eval/·scripts/ 는 __init__.py 없는 실행 스크립트라 패키지에서 제외(설치 대상 아님).
[tool.setuptools.packages.find]
include = ["backend*", "graphdb*", "pipeline*", "prompts*"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# 외부(시스템 ROS 등) pytest 플러그인 자동로드 차단 — venv 안의 것만 쓰게.
# 주: ROS 환경이 PYTHONPATH로 주입되는 머신에선  PYTHONPATH= uv run pytest  로 실행.
addopts = "-p no:cacheprovider"
